--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_native_splash: ^2.2.19
   fl_chart: ^0.61.0
   charts_flutter: ^0.12.0
+  http: ^0.13.5
+  shared_preferences: ^2.1.0
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
