--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_native_splash: ^2.2.19
   fl_chart: ^0.61.0
   charts_flutter: ^0.12.0
+  firebase_core: ^2.9.0
+  firebase_auth: ^4.4.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
@@ -58,13 +61,13 @@ dev_dependencies:
 flutter_native_splash:
   color: '#f7f6f1'
   color_dark: '272727'
-  image: assets/images/Aimassitlogo.png
-  image_dark: assets/images/Aimassitlogo.png
+  image: assets/images/Aimassistlogo.png
+  image_dark: assets/images/Aimassistlogo.png
 
 android_12:
-  image: assets/images/Aimassitlogo.png
+  image: assets/images/Aimassistlogo.png
   icon_background_color: '#f7f6f1' 
-  image_dark: assets/images/Aimassitlogo.png
+  image_dark: assets/images/Aimassistlogo.png
   icon_background_color_dark: '#272727'
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
